--- a/ros_ws/docker-compose.yaml
+++ b/ros_ws/docker-compose.yaml
@@ -11,4 +11,4 @@ services:
     network_mode: "host"
     volumes:
       - ./code:/code
-      #- ./src:/root/catkin_ws/src
+      - ./src:/root/catkin_ws/src
